fixing overflow x

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@
 }
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+  max-height: 100vh;
 }
 
 :root {
@@ -20,6 +22,8 @@ html {
 
 body {
   font-family: sans-serif;
+  overflow-x: hidden;
+  min-height: 100%;
 }
 
 a {
@@ -34,7 +38,8 @@ ul {
   position: sticky;
   top: 0;
   right: 0;
-  width: 100vw;
+  width: 100%;
+  max-width: 100vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -72,7 +77,7 @@ nav a {
 
 #welcome-section {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background-color: var(--black);
 }
 .welcome-greeting {
@@ -244,15 +249,11 @@ footer {
 
 /*MEDIA QUERIES */
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1400px) {
   .project-tiles {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-  }
-  .project-tile {
-    height: 350px;
-    width: 400px;
   }
 }
 
